correct safari newsletter button problem on mobile

--- a/app/assets/stylesheets/components/_right_panel.scss
+++ b/app/assets/stylesheets/components/_right_panel.scss
@@ -38,7 +38,11 @@
 }
 
 @media(max-width: 992px) {
+  .right-panel {
+    margin: 20px 0;
+  }
   #newsletter-form {
+    height: 105px;
     flex-direction: column;
     justify-content: center;
   }
